--- a/src/main/webapp/i18n/en/favorito.json
+++ b/src/main/webapp/i18n/en/favorito.json
@@ -16,6 +16,7 @@
             "detail": {
                 "title": "Favorito"
             },
+            "like": "Like",
             "likes": "Likes",
             "asof": "Asof",
             "user": "User",
