--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -23,7 +23,7 @@
                 "login": "Iniciar sesión",
                 "logout": "Cerrar la sesión",
                 "register": "Crear una  asociacion",
-                "register": "Crear socio"
+                "registerSocio": "Crear socio"
 
 
             },
